# echo

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  contributors.yml
.cursor/rules/: database_commands.md  database_migrations.md  database_useful_queries.md  directus_does_not_start.md  directus_invalid_password.md  frontend_configuration.md  frontend_does_not_start.md  frontend_forms.md  frontend_resizable_elements.md  frontend_spacing.md  libraries.md  readme.md  redis_not_starting.md  resources.md  server_adding_dependencies.md  server_configuration.md  server_readme.md
.github/workflows/: backend-update-prod.yaml  check-cla.yml  ci-servers.yml  ci.yml  cla.yml  deploy-portal-staging.yml  dev-backend-update.yaml  dev-deploy-backends.yaml  dev-deploy-dashboard.yml  dev-deploy-gitops-backends.yaml  dev-deploy-vercel-dashboard.yml  dev-deploy-vercel-portal.yml  prod-deploy-backends.yaml  prod-deploy-gitops-backends.yaml  prod-deploy-vercel-dashboard.yml  prod-deploy-vercel-portal.yml
deploy/argo/: echo-dev.yaml  echo-prod.yaml
deploy/secrets/: .gitignore  echo-backend-secrets-dev.yaml
docs/: readme.md
echo/: .gitignore  api.http  check-code.sh  dev-tmux.sh  docker-compose.coolify.yml  readme.md  setup.sh
echo-user-docs/: README.md  middleware.js  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  theme.config.tsx  tsconfig.json
echo-user-docs/pages/: _all-english-content.mdx  _app.tsx  _meta.en-US.json  _meta.nl-NL.json
echo/.cursor/: mcp.json
echo/.devcontainer/: devcontainer.json  docker-compose-osp.yml  docker-compose.yml  env-osp
echo/directus/: .env.sample  Dockerfile  directus-sync.config.js  sync.sh
echo/docs/: LazyRoute.md  README.md  database_migrations.md  database_useful_queries.md  directus_sdk_patterns.md  frontend_configuration.md  frontend_getting_started.md  frontend_translations.md  litellm_config.md  meta.md  middleware.js  modular_component_pattern.md  next.config.js  server_adding_dependencies.md  theme.config.tsx
echo/frontend/: .env.example  .env.sample  .eslintrc  (+14 more)
echo/server/: .env.sample  .gitignore  Dockerfile  README.md  prod-scheduler.sh  prod-worker-cpu.sh  prod-worker-liveness.py  prod-worker-readiness.py  prod-worker.sh  prod.sh  pyproject.toml  run-scheduler.sh  run-worker-cpu.sh  run-worker.sh  run.sh
echo/server/dembrane/: anthropic.py  audio_utils.py  chains.py  chat_utils.py  config.py  conversation_health.py  conversation_utils.py  database.py  directus.py  embedding.py  image_utils.py  main.py  ner.py  openai.py  postgresdb_manager.py  postgresdbmanager.py  process_resource.py  processing_status_utils.py  prompts.py  quote_utils.py  rag.py  rag_manager.py  reply_utils.py  report_utils.py  runpod.py  s3.py  scheduler.py  schemas.py  sentry.py  tasks.py  tasks_config.py  transcribe.py  utils.py
echo/server/dembrane/api/: api.py  chat.py  conversation.py  dependency_auth.py  exceptions.py  participant.py  project.py  resource.py  stateless.py  static.py
echo/server/dembrane/audio_lightrag/main/: run_etl.py
echo/server/dembrane/audio_lightrag/pipelines/: audio_etl_pipeline.py  contextual_chunk_etl_pipeline.py  directus_etl_pipeline.py
echo/server/dembrane/audio_lightrag/tests/: conftest.py  e2e_test.py
echo/server/dembrane/audio_lightrag/tests/unit_tests/: audio_etl_pipeline_test.py  contextual_chunk_etl_pipeline_test.py  directus_etl_pipeline_test.py  neo4j_test.py
echo/server/dembrane/audio_lightrag/utils/: audio_utils.py  azure_utils.py  echo_utils.py  lightrag_utils.py  litellm_utils.py  process_tracker.py  prompts.py
echo/server/dembrane/service/: __init__.py  conversation.py  event.py  file.py  project.py
echo/server/json_templates/: default_view_recurring_themes.de.jinja  default_view_recurring_themes.en.jinja  default_view_recurring_themes.es.jinja  default_view_recurring_themes.fr.jinja  default_view_recurring_themes.nl.jinja
echo/server/prompt_templates/: assign_aspect_centroid.de.jinja  assign_aspect_centroid.en.jinja  assign_aspect_centroid.es.jinja  assign_aspect_centroid.fr.jinja  assign_aspect_centroid.nl.jinja  audio_model_system_prompt.en.jinja  brainstorm.en.jinja  brainstorm.fr.jinja  context_conversations.de.jinja  context_conversations.en.jinja  context_conversations.es.jinja  context_conversations.fr.jinja  context_conversations.nl.jinja  context_project.en.jinja  default_whisper_prompt.de.jinja  default_whisper_prompt.en.jinja  default_whisper_prompt.es.jinja  default_whisper_prompt.fr.jinja  default_whisper_prompt.nl.jinja  generate_aspect_image.en.jinja  generate_aspect_long_summary.de.jinja  generate_aspect_long_summary.en.jinja  generate_aspect_long_summary.es.jinja  generate_aspect_long_summary.fr.jinja  generate_aspect_long_summary.nl.jinja  generate_aspect_short_summary.de.jinja  generate_aspect_short_summary.en.jinja  generate_aspect_short_summary.es.jinja  generate_aspect_short_summary.fr.jinja  generate_aspect_short_summary.nl.jinja  generate_chat_title.en.jinja  generate_conversation_summary.de.jinja  generate_conversation_summary.en.jinja  generate_conversation_summary.es.jinja  generate_conversation_summary.fr.jinja  generate_conversation_summary.nl.jinja  generate_insight_summary.de.jinja  generate_insight_summary.en.jinja  generate_insight_summary.es.jinja  generate_insight_summary.fr.jinja  (+54 more)
echo/server/tests/: common.py  test_audio_utils.py  test_chat_utils.py  test_conversation_utils.py  test_embedding.py  test_quote_utils.py  test_transcribe_assembly.py  test_transcribe_runpod.py
echo/server/tests/api/: test_conversation.py
echo/server/tests/data/audio/: .gitignore  aac.aac  m4a.m4a  test.m4a  webm.webm
echo/server/tests/k6_load_testing/: .gitignore  env.example  run-tests.sh
echo/server/tests/k6_load_testing/scripts/: k6_runpod_transcribe.js
echo/server/tests/service/: test_conversation_service.py  test_file_service.py  test_project_service.py
infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf  vercel.tf
osp/: .env.example  Makefile  docker-compose-prod.yml  init.sql
(+747 files in other folders)
